@@ -33,6 +33,7 @@ import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
 import androidx.core.content.ContextCompat;
 import androidx.preference.PreferenceManager;
+import com.android.volley.VolleyError;
 import com.google.android.material.snackbar.Snackbar;
 import com.google.gson.Gson;
 import com.google.gson.reflect.TypeToken;
@@ -299,7 +300,7 @@ public class MasterLocationFragment extends BaseFragment {
           activity.showSnackbar(
               Snackbar.make(
                   activity.binding.frameMainContainer,
-                  activity.getString(R.string.error_undefined),
+                  getErrorMessage(error),
                   Snackbar.LENGTH_SHORT
               ).setAction(
                   activity.getString(R.string.action_retry),
@@ -391,7 +392,7 @@ public class MasterLocationFragment extends BaseFragment {
           jsonObject,
           response -> activity.navigateUp(),
           error -> {
-            showErrorMessage();
+            showErrorMessage(error);
             if (debug) {
               Log.e(TAG, "saveLocation: " + error);
             }
@@ -403,7 +404,7 @@ public class MasterLocationFragment extends BaseFragment {
           jsonObject,
           response -> activity.navigateUp(),
           error -> {
-            showErrorMessage();
+            showErrorMessage(error);
             if (debug) {
               Log.e(TAG, "saveLocation: " + error);
             }
@@ -456,15 +457,15 @@ public class MasterLocationFragment extends BaseFragment {
     dlHelper.delete(
         grocyApi.getObject(GrocyApi.ENTITY.LOCATIONS, locationId),
         response -> activity.navigateUp(),
-        error -> showErrorMessage()
+        this::showErrorMessage
     );
   }
 
-  private void showErrorMessage() {
+  private void showErrorMessage(VolleyError volleyError) {
     activity.showSnackbar(
         Snackbar.make(
             activity.binding.frameMainContainer,
-            activity.getString(R.string.error_undefined),
+            getErrorMessage(volleyError),
             Snackbar.LENGTH_SHORT
         )
     );
