@@ -33,6 +33,7 @@ import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
 import androidx.core.content.ContextCompat;
 import androidx.preference.PreferenceManager;
+import com.android.volley.VolleyError;
 import com.google.android.material.snackbar.Snackbar;
 import com.google.gson.Gson;
 import com.google.gson.reflect.TypeToken;
@@ -285,7 +286,7 @@ public class MasterProductGroupFragment extends BaseFragment {
           activity.showSnackbar(
               Snackbar.make(
                   activity.binding.frameMainContainer,
-                  activity.getString(R.string.error_undefined),
+                  getErrorMessage(error),
                   Snackbar.LENGTH_SHORT
               ).setAction(
                   activity.getString(R.string.action_retry),
@@ -377,7 +378,7 @@ public class MasterProductGroupFragment extends BaseFragment {
           jsonObject,
           response -> activity.navigateUp(),
           error -> {
-            showErrorMessage();
+            showErrorMessage(error);
             if (debug) {
               Log.e(TAG, "saveProductGroup: " + error);
             }
@@ -389,7 +390,7 @@ public class MasterProductGroupFragment extends BaseFragment {
           jsonObject,
           response -> activity.navigateUp(),
           error -> {
-            showErrorMessage();
+            showErrorMessage(error);
             if (debug) {
               Log.e(TAG, "saveProductGroup: " + error);
             }
@@ -443,15 +444,15 @@ public class MasterProductGroupFragment extends BaseFragment {
     dlHelper.delete(
         grocyApi.getObject(GrocyApi.ENTITY.PRODUCT_GROUPS, productGroupId),
         response -> activity.navigateUp(),
-        error -> showErrorMessage()
+        error -> showErrorMessage(error)
     );
   }
 
-  private void showErrorMessage() {
+  private void showErrorMessage(VolleyError volleyError) {
     activity.showSnackbar(
         Snackbar.make(
             activity.binding.frameMainContainer,
-            activity.getString(R.string.error_undefined),
+            getErrorMessage(volleyError),
             Snackbar.LENGTH_SHORT
         )
     );
