@@ -31,6 +31,7 @@ import android.view.ViewGroup;
 import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
 import androidx.core.content.ContextCompat;
+import com.android.volley.VolleyError;
 import com.google.android.material.snackbar.Snackbar;
 import com.google.gson.Gson;
 import com.google.gson.reflect.TypeToken;
@@ -277,7 +278,7 @@ public class MasterStoreFragment extends BaseFragment {
           activity.showSnackbar(
               Snackbar.make(
                   activity.findViewById(R.id.frame_main_container),
-                  activity.getString(R.string.error_undefined),
+                  getErrorMessage(error),
                   Snackbar.LENGTH_SHORT
               ).setAction(
                   activity.getString(R.string.action_retry),
@@ -364,7 +365,7 @@ public class MasterStoreFragment extends BaseFragment {
           jsonObject,
           response -> activity.navigateUp(),
           error -> {
-            showErrorMessage();
+            showErrorMessage(error);
             if (debug) {
               Log.e(TAG, "saveStore: " + error);
             }
@@ -376,7 +377,7 @@ public class MasterStoreFragment extends BaseFragment {
           jsonObject,
           response -> activity.navigateUp(),
           error -> {
-            showErrorMessage();
+            showErrorMessage(error);
             if (debug) {
               Log.e(TAG, "saveStore: " + error);
             }
@@ -426,15 +427,15 @@ public class MasterStoreFragment extends BaseFragment {
     dlHelper.delete(
         grocyApi.getObject(GrocyApi.ENTITY.STORES, storeId),
         response -> activity.navigateUp(),
-        error -> showErrorMessage()
+        error -> showErrorMessage(error)
     );
   }
 
-  private void showErrorMessage() {
+  private void showErrorMessage(VolleyError volleyError) {
     activity.showSnackbar(
         Snackbar.make(
             activity.findViewById(R.id.frame_main_container),
-            activity.getString(R.string.error_undefined),
+            getErrorMessage(volleyError),
             Snackbar.LENGTH_SHORT
         )
     );
