@@ -478,7 +478,7 @@ public class ConsumeViewModel extends BaseViewModel {
           sendEvent(Event.CONSUME_SUCCESS);
         },
         error -> {
-          showErrorMessage();
+          showErrorMessage(error);
           if (debug) {
             Log.i(TAG, "consumeProduct: " + error);
           }
@@ -495,7 +495,7 @@ public class ConsumeViewModel extends BaseViewModel {
             Log.i(TAG, "undoTransaction: undone");
           }
         },
-        error -> showErrorMessage()
+        this::showErrorMessage
     );
   }
 
