@@ -384,6 +384,7 @@
   <string name="error_failed_barcode_upload">Could not upload barcode</string>
   <string name="error_wrong_grocycode_type">grocycode contains wrong entity type</string>
   <string name="error_stock_entry_grocycode">Stock entry from grocycode not found</string>
+  <string name="error_permission">No permission for this action</string>
   <string name="error_undefined">An error occurred</string>
 
   <string name="title_overview">Overview</string>
