@@ -8,6 +8,7 @@
 - Improved: Workflow for master data pages with keyboard
 - Improved: Navigation menu has less horizontal entries, transaction pages are in one row
 - Improved: Added option to show product description on shopping mode page (#443)
+- Improved: Error message for 403 response "no permission" (#432)
 - Fixed: Product info bottom sheet didn't open if location not set in product
 - Fixed: Scrollbars don't stop above the bottom anymore
 - Fixed: Unsorted lists on master data product pages (thanks @Turysaz) (#473)
